--- a/docroot/sites/all/themes/informea.theme/less/components/search-block.less
+++ b/docroot/sites/all/themes/informea.theme/less/components/search-block.less
@@ -96,9 +96,7 @@
   .select2-container {
     align-items: center;
     display: inline-flex;
-    @media (min-width: @screen-sm-min) {
-      width: auto !important;
-    }
+    width: auto !important;
   }
   select {
     -moz-appearance: none;
